Ajusta nombres de imágenes en metodología III

--- a/Informe VI - Lab. Circuitos.tex
+++ b/Informe VI - Lab. Circuitos.tex
@@ -151,25 +151,25 @@ Con la ayuda del generador se configuraron las señales enlistadas en la Tabla~\
 \end{table}%
 \begin{figure}[H]
     \centering
-    \framebox[0.75\linewidth]{\rule{0pt}{3.5cm}}
+    \includegraphics[width=0.75\linewidth]{1.jpg}
     \caption{Captura de la señal senoidal de \SI{100}{\hertz}.}
     \label{fig:frecuencia-senoidal-100hz}
 \end{figure}
 \begin{figure}[H]
     \centering
-    \framebox[0.75\linewidth]{\rule{0pt}{3.5cm}}
+    \includegraphics[width=0.75\linewidth]{2.jpg}
     \caption{Captura de la señal senoidal de \SI{120}{\kilo\hertz}.}
     \label{fig:frecuencia-senoidal-120khz}
 \end{figure}
 \begin{figure}[H]
     \centering
-    \framebox[0.75\linewidth]{\rule{0pt}{3.5cm}}
+    \includegraphics[width=0.75\linewidth]{3.jpg}
     \caption{Captura de la señal en rampa de \SI{1}{\mega\hertz}.}
     \label{fig:frecuencia-rampa-1mhz}
 \end{figure}
 \begin{figure}[H]
     \centering
-    \framebox[0.75\linewidth]{\rule{0pt}{3.5cm}}
+    \includegraphics[width=0.75\linewidth]{4.jpg}
     \caption{Captura de la señal en rampa de \SI{1.5}{\kilo\hertz}.}
     \label{fig:frecuencia-rampa-1k5hz}
 \end{figure}
