Corrige acentos y referencias de simulación

--- a/Informe VI - Lab. Circuitos.tex
+++ b/Informe VI - Lab. Circuitos.tex
@@ -43,13 +43,13 @@ Contexto del problema, motivación, contribuciones y estructura del documento.
 \begin{itemize}
   \item Implementar y simular un circuito serie con varias resistencias para calcular los valores de voltaje en cada una de ellas.
   \item Determinar la resistencia equivalente en un circuito serie.
-  \item Comparar los valores te\'oricos, simulados e implementados de los voltajes y corriente en un circuito serial resistivo.
+  \item Comparar los valores teóricos, simulados e implementados de los voltajes y corriente en un circuito serial resistivo.
   \item Determinar la potencia disipada por cada resistor en un circuito serial.
-  \item Identificar las partes principales del osciloscopio y comprender su funci\'on.
-  \item Configurar adecuadamente los controles del osciloscopio para visualizar se\~nales.
-  \item Medir caracter\'isticas de se\~nales el\'ectricas como amplitud, frecuencia, per\'iodo, fase y forma de onda utilizando el osciloscopio.
+  \item Identificar las partes principales del osciloscopio y comprender su función.
+  \item Configurar adecuadamente los controles del osciloscopio para visualizar señales.
+  \item Medir características de señales eléctricas como amplitud, frecuencia, período, fase y forma de onda utilizando el osciloscopio.
   \item Interpretar correctamente las formas de onda observadas.
-  \item Familiarizarse con el funcionamiento de un generador de se\~nales.
+  \item Familiarizarse con el funcionamiento de un generador de señales.
 \end{itemize}
 
 
@@ -93,21 +93,21 @@ La fuente de voltaje fue ajustada a 5 V y sus cables se conectaron a la sonda de
     \label{fig:placeholder}
 \end{figure}
 \subsection{Metodología II: medición de voltaje AC}
-Se monta el circuito que dice la guia experimental (veáse la figura 2), empleando una fuente de alimentación de 120 V a una frecuencia de 60 Hz. El multímetro se conectó en los puntos A y B, registrando en su pantalla la medición correspondiente.
+Se monta el circuito que indica la guía experimental (véase la Figura~2), empleando una fuente de alimentación de 120 V a una frecuencia de 60 Hz. El multímetro se conectó en los puntos A y B, registrando en su pantalla la medición correspondiente.
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.75\linewidth]{Figura 4.jpg}
     \caption{Simulación circuito medición de voltaje a la salida de transformador}
     \label{fig:placeholder}
 \end{figure}
-En la figura 3, se puede observar como se toma el voltaje a la salida del transformador, lo que nos da 13.3 V en AC 
+En la Figura~3 se observa cómo se toma el voltaje a la salida del transformador, lo que proporciona 13.3 V en AC.
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.5\linewidth]{WhatsApp Image 2025-10-01 at 9.40.29 PM.jpeg}
     \caption{Voltaje obtenido}
     \label{fig:placeholder}
 \end{figure}
-Al desconectarlo y conectar ahora los nodos A y B en el osciloscopio nos dio que la señal obtenida fue: 
+Al desconectarlo y conectar ahora los nodos A y B en el osciloscopio se obtuvo la siguiente señal:
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.75\linewidth]{WhatsApp Image 2025-10-01 at 9.59.50 PM.jpeg}
@@ -183,13 +183,13 @@ Se armó el circuito RC serie indicado en la guía práctica sobre un protoboard
 \end{figure}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.75\linewidth]{Simulacion 1}
+\includegraphics[width=0.75\linewidth]{Simulacion 1.jpg}
     \caption{Esquemático de la simulación del circuito RC.}
     \label{fig:simulacion-rc-esquematico}
 \end{figure}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.75\linewidth]{Simulacion 2}
+\includegraphics[width=0.75\linewidth]{Simulacion 2.jpg}
     \caption{Respuesta simulada del voltaje en el condensador.}
     \label{fig:simulacion-rc-respuesta}
 \end{figure}
