Add grffile package for spaced image names

--- a/Informe VI - Lab. Circuitos.tex
+++ b/Informe VI - Lab. Circuitos.tex
@@ -9,6 +9,7 @@
 \usepackage[spanish,es-noshorthands]{babel}
 
 \usepackage{graphicx}    % figuras
+\usepackage{grffile}     % permite nombres de archivo con espacios
 \usepackage{amsmath,amssymb}
 \usepackage{siunitx}     % unidades
 \usepackage{booktabs}    % tablas bonitas
