Update Informe VI - Lab. Circuitos.tex

--- a/Informe VI - Lab. Circuitos.tex
+++ b/Informe VI - Lab. Circuitos.tex
@@ -188,13 +188,13 @@ Se armó el circuito RC serie indicado en la guía práctica sobre un protoboard
 \begin{figure}[htbp]
     \centering
 \includegraphics[width=0.75\linewidth]{Simulacion 1.jpg}
-    \caption{Esquemático de la simulación del circuito RC.}
+    \caption{Simulación en el punto A}
     \label{fig:simulacion-rc-esquematico}
 \end{figure}
 \begin{figure}[htbp]
     \centering
 \includegraphics[width=0.75\linewidth]{Simulacion 2.jpg}
-    \caption{Respuesta simulada del voltaje en el condensador.}
+    \caption{Simulación en el punto B}
     \label{fig:simulacion-rc-respuesta}
 \end{figure}
 \section{Resultados}
