Actualiza descripción de la metodología IV

--- a/Informe VI - Lab. Circuitos.tex
+++ b/Informe VI - Lab. Circuitos.tex
@@ -172,7 +172,7 @@ Con la ayuda del generador se configuraron las señales enlistadas en la Tabla~\
     \label{fig:frecuencia-rampa-1k5hz}
 \end{figure}
 \subsection{Metodología IV: montaje de carga y descarga del condensador}
-Se armó el circuito RC serie indicado en la guía práctica sobre un protoboard, conectando en serie la resistencia de \SI{1}{\kilo\ohm} con el condensador proporcionado en el laboratorio. El generador de funciones se acopló al nodo de entrada del circuito y se condujo el retorno a tierra común, mientras que las puntas del osciloscopio quedaron listas para registrar la señal aplicada y la respuesta del condensador. Como se aprecia en la Figura~\ref{fig:montaje-rc}, el montaje mantiene una conexión compacta entre la resistencia, el condensador y las terminales de medición. Además, se replicó el circuito en un entorno SPICE con una fuente cuadrada de \SI{5}{\volt} a \SI{1}{\kilo\hertz}, conservando los valores de la resistencia y el condensador para contrastar la evolución temporal del voltaje almacenado. Las Figuras~\ref{fig:simulacion-rc-esquematico} y~\ref{fig:simulacion-rc-respuesta} recogen el diagrama esquemático utilizado y la respuesta numérica de carga y descarga del condensador.
+En la práctica se prescindió del transformador planteado originalmente y se procedió a realizar las mediciones conectando de forma directa el generador de funciones al canal~1 del osciloscopio. La salida del generador se fijó con una onda cuadrada de \SI{5}{\volt} pico a pico y frecuencia de \SI{1}{\kilo\hertz}, utilizando el cable coaxial y el retorno a tierra del mismo instrumento para garantizar una referencia común. Sobre el protoboard únicamente se dispusieron la resistencia de \SI{1}{\kilo\ohm} y el condensador en serie, tomando con la sonda del osciloscopio el voltaje en el nodo del condensador para observar los transitorios de carga y descarga. La Figura~\ref{fig:montaje 4} muestra la simplicidad del arreglo empleado, mientras que las Figuras~\ref{fig:simulacion-rc-esquematico} y~\ref{fig:simulacion-rc-respuesta} provienen de la simulación utilizada para contrastar los resultados experimentales.
 \begin{figure}[htbp]
     \centering
 \includegraphics[width=0.75\linewidth]{montaje 4.jpg}
